<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:title="@string/general_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="example_switch"
            android:summary="Turn on something"
            android:title="Turn on" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="enter your user name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Display Name" />

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_sync_to_cloud_titles"
            android:entryValues="@array/pref_sync_to_cloud_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="Syncronize data to robonail frequency"
            android:summary="%s\nThis allows the machine to receive software updates and send diagnostic information for troubleshooting"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/timing_and_debug_title"
        android:summary="@string/summary_debug_preference">

        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->
        <!--PreferenceScreen
            android:key="debug_preference"
            android:title="Timing and Debugging"
            android:summary="@string/summary_debug_preference"-->

        <EditTextPreference
            android:defaultValue="350"
            android:inputType="number"
            android:key="delay_http_requests_millis"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="Number of milliseconds to delay between requesting status updates from the robot"
            android:title="Delay Http Requests Millis" />
            <!-- You can place more preferences here that will be shown on the next screen. -->
            <SwitchPreference
                android:defaultValue="true"
                android:key="switch_debug"
                android:summary="@string/debug_enabled_summary"
                android:title="Debugging Enabled" />
            <CheckBoxPreference
                android:key="checkbox_receive_software_updates"
                android:title="@string/title_receive_software_updates"
                android:summary="@string/summary_receive_software_updates" />

        <!--PreferenceScreen
            android:title="@string/title_intent_preference"
            android:summary="@string/summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />

        </PreferenceScreen-->
    </PreferenceCategory>
</PreferenceScreen>